--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "gulp": "^3.9.1",
+    "gulp-eslint": "^4.0.2",
     "gulp-load-plugins": "^1.5.0",
     "gulp-postcss": "^7.0.1",
     "gulp-sass": "^3.1.0",
