--- a/package.json
+++ b/package.json
@@ -11,15 +11,25 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^8.1.0",
+    "browser-sync": "^2.24.6",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "gulp": "^3.9.1",
     "gulp-eslint": "^4.0.2",
     "gulp-load-plugins": "^1.5.0",
     "gulp-postcss": "^7.0.1",
     "gulp-sass": "^3.1.0",
     "gulp-sass-lint": "^1.3.4",
-    "gulp-server-livereload": "^1.9.2"
+    "gulp-server-livereload": "^1.9.2",
+    "gulp-stylelint": "^7.0.0",
+    "normalize-scss": "^7.0.1",
+    "stylelint": "^9.4.0",
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-order": "^1.0.0",
+    "stylelint-scss": "^3.3.0",
+    "stylint": "^1.5.9"
   }
 }
