--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^8.1.0",
-    "browser-sync": "^2.24.6",
+    "browser-sync": "^2.24.7",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
@@ -26,9 +26,14 @@
     "gulp-server-livereload": "^1.9.2",
     "gulp-stylelint": "^7.0.0",
     "normalize-scss": "^7.0.1",
-    "stylelint": "^9.4.0",
+    "stylelint": "^9.5.0",
+    "stylelint-a11y": "^1.1.7",
+    "stylelint-at-rule-no-children": "^0.3.1",
     "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-declaration-block-no-ignored-properties": "^1.1.0",
+    "stylelint-high-performance-animation": "^1.1.0",
     "stylelint-order": "^1.0.0",
-    "stylelint-scss": "^3.3.0"
+    "stylelint-scss": "^3.3.0",
+    "stylelint-selector-bem-pattern": "^2.0.0"
   }
 }
