--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-data": "^1.3.1",
     "gulp-eslint": "^4.0.2",
     "gulp-load-plugins": "^1.5.0",
+    "gulp-nunjucks-render": "^2.2.2",
     "gulp-postcss": "^7.0.1",
     "gulp-sass": "^3.1.0",
     "gulp-sass-lint": "^1.3.4",
