--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-sass-lint": "^1.3.4",
     "gulp-server-livereload": "^1.9.2",
     "gulp-stylelint": "^7.0.0",
+    "gulp-util": "^3.0.8",
     "normalize-scss": "^7.0.1",
     "stylelint": "^9.5.0",
     "stylelint-a11y": "^1.1.7",
