--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "gulp": "^3.9.1",
+    "gulp-cheerio": "^0.6.3",
     "gulp-clean": "^0.4.0",
     "gulp-data": "^1.3.1",
     "gulp-eslint": "^4.0.2",
     "gulp-load-plugins": "^1.5.0",
     "gulp-nunjucks-render": "^2.2.2",
     "gulp-postcss": "^7.0.1",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^3.1.0",
     "gulp-sass-lint": "^1.3.4",
     "gulp-server-livereload": "^1.9.2",
     "gulp-stylelint": "^7.0.0",
+    "gulp-svgmin": "^2.0.0",
+    "gulp-svgstore": "^7.0.0",
     "gulp-util": "^3.0.8",
     "normalize-scss": "^7.0.1",
     "stylelint": "^9.5.0",
