--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "gulp-data": "^1.3.1",
     "gulp-eslint": "^4.0.2",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-nunjucks-render": "^2.2.2",
     "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^3.1.0",
@@ -31,6 +30,7 @@
     "gulp-stylelint": "^7.0.0",
     "gulp-svgmin": "^2.0.0",
     "gulp-svgstore": "^7.0.0",
+    "gulp-twig": "^1.2.0",
     "gulp-util": "^3.0.8",
     "normalize-scss": "^7.0.1",
     "stylelint": "^9.5.0",
@@ -41,5 +41,6 @@
     "stylelint-order": "^1.0.0",
     "stylelint-scss": "^3.3.0",
     "stylelint-selector-bem-pattern": "^2.0.0"
-  }
+  },
+  "dependencies": {}
 }
