--- a/package.json
+++ b/package.json
@@ -1,43 +1,47 @@
 {
-  "name": "fresher",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {},
-  "dependencies": {
-    "autoprefixer": "^9.6.1",
-    "browser-sync": "^2.26.7",
-    "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
-    "gulp": "^4.0.2",
-    "gulp-cheerio": "^0.6.3",
-    "gulp-clean": "^0.4.0",
-    "gulp-data": "^1.3.1",
-    "gulp-eslint": "^6.0.0",
-    "gulp-load-plugins": "^2.0.0",
-    "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-server-livereload": "^1.9.2",
-    "gulp-stylelint": "^9.0.0",
-    "gulp-svgmin": "^2.2.0",
-    "gulp-svgstore": "^7.0.1",
-    "gulp-twing": "^3.0.1",
-    "gulp-util": "^3.0.8",
-    "normalize-scss": "^7.0.1",
-    "stylelint": "^10.1.0",
-    "stylelint-config-recommended-scss": "^3.3.0",
-    "stylelint-declaration-block-no-ignored-properties": "^2.1.0",
-    "stylelint-order": "^3.0.1",
-    "stylelint-scss": "^3.9.2",
-    "twing": "^2.3.3"
-  }
+    "name": "fresher",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {},
+    "dependencies": {
+        "@babel/core": "^7.5.5",
+        "@babel/preset-env": "^7.5.5",
+        "autoprefixer": "^9.6.1",
+        "babel-loader": "^8.0.6",
+        "browser-sync": "^2.26.7",
+        "eslint": "^6.1.0",
+        "eslint-config-airbnb": "^17.1.1",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
+        "eslint-plugin-react": "^7.14.3",
+        "gulp": "^4.0.2",
+        "gulp-cheerio": "^0.6.3",
+        "gulp-clean": "^0.4.0",
+        "gulp-data": "^1.3.1",
+        "gulp-eslint": "^6.0.0",
+        "gulp-load-plugins": "^2.0.0",
+        "gulp-postcss": "^8.0.0",
+        "gulp-rename": "^1.4.0",
+        "gulp-sass": "^4.0.2",
+        "gulp-server-livereload": "^1.9.2",
+        "gulp-stylelint": "^9.0.0",
+        "gulp-svgmin": "^2.2.0",
+        "gulp-svgstore": "^7.0.1",
+        "gulp-twing": "^3.0.1",
+        "gulp-util": "^3.0.8",
+        "normalize-scss": "^7.0.1",
+        "stylelint": "^10.1.0",
+        "stylelint-config-recommended-scss": "^3.3.0",
+        "stylelint-declaration-block-no-ignored-properties": "^2.1.0",
+        "stylelint-order": "^3.0.1",
+        "stylelint-scss": "^3.9.2",
+        "twing": "^2.3.3",
+        "webpack": "^4.39.0"
+    }
 }
