--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@babel/core": "^7.5.5",
         "@babel/preset-env": "^7.5.5",
+        "@babel/register": "^7.5.5",
         "autoprefixer": "^9.6.1",
         "babel-loader": "^8.0.6",
         "browser-sync": "^2.26.7",
@@ -44,6 +45,7 @@
         "svg4everybody": "^2.1.9",
         "toggles-switches": "https://github.com/digitalsurgeons/toggles-switches",
         "twing": "^2.3.3",
+        "twing-markdown": "^1.0.0",
         "webpack": "^4.39.0"
     }
 }
