--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "serve": "gulp",
+        "watch": "gulp watch",
+        "build": "gulp build",
+        "test": "gulp test"
     },
     "author": "",
     "license": "ISC",
@@ -14,16 +17,17 @@
         "@babel/preset-env": "^7.5.5",
         "@babel/register": "^7.5.5",
         "autoprefixer": "^9.6.1",
+        "babel-eslint": "^10.0.3",
         "babel-loader": "^8.0.6",
         "browser-sync": "^2.26.7",
         "eslint": "^6.1.0",
-        "eslint-config-airbnb": "^17.1.1",
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "^7.14.3",
         "gulp": "^4.0.2",
         "gulp-cheerio": "^0.6.3",
         "gulp-clean": "^0.4.0",
+        "gulp-csso": "^3.0.1",
         "gulp-data": "^1.3.1",
         "gulp-eslint": "^6.0.0",
         "gulp-load-plugins": "^2.0.0",
@@ -37,6 +41,7 @@
         "gulp-twing": "^3.0.1",
         "gulp-util": "^3.0.8",
         "normalize-scss": "^7.0.1",
+        "postcss-pxtorem": "^4.0.1",
         "stylelint": "^10.1.0",
         "stylelint-config-recommended-scss": "^3.3.0",
         "stylelint-declaration-block-no-ignored-properties": "^2.1.0",
